--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chat - DeepSeek</title>
+    <title>AI Chat - OpenRouter (Mistral 7B)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="chat-container">
-        <h2>AI Chat (DeepSeek)</h2>
+        <h2>AI Chat (Mistral 7B)</h2>
         <div id="chat-box"></div>
         <input type="text" id="user-input" placeholder="Ketik pesan..." onkeypress="handleKeyPress(event)">
         <button onclick="sendMessage()">Kirim</button>
