--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <div id="chat-box"></div>
         <input type="text" id="user-input" placeholder="Ketik pesan..." onkeypress="handleKeyPress(event)">
         <button onclick="sendMessage()">Kirim</button>
+
+        <!-- Area Debugging -->
+        <div class="debug-container">
+            <h3>Debugging Info</h3>
+            <pre id="debug-box">Menunggu log debugging...</pre>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
