--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chat - OpenRouter (Mistral 7B)</title>
+    <title>AI Chat - Hugging Face (Mistral 7B)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,10 +12,8 @@
         <div id="chat-box"></div>
         <input type="text" id="user-input" placeholder="Ketik pesan..." onkeypress="handleKeyPress(event)">
         <button onclick="sendMessage()">Kirim</button>
-
-        <!-- Area Debugging -->
         <div class="debug-container">
-            <h3>Debugging Info</h3>
+            <h3>Debugging</h3>
             <pre id="debug-box">Menunggu log debugging...</pre>
         </div>
     </div>
